<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>de.gematik.demis</groupId>
    <artifactId>spring-parent</artifactId>
    <version>2.14.21</version>
    <relativePath></relativePath>
  </parent>
  <artifactId>notification-gateway</artifactId>
  <name>DEMIS Notification-Gateway</name>
  <version>6.7.8-SNAPSHOT</version>
  <packaging>jar</packaging>
  <description>Gateway Service for Notifications over Portal</description>
  <licenses>
    <license>
      <name>Licensed under the EUPL 1.2</name>
      <url>https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12</url>
    </license>
  </licenses>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>21</java.version>
    <openapi-generator-maven-plugin.version>7.17.0</openapi-generator-maven-plugin.version>
    <demis-commons.version>3.3.1</demis-commons.version>
    <rest.assured.version>5.5.6</rest.assured.version>
    <jackson-databind-nullable.version>0.2.4</jackson-databind-nullable.version>
    <sonar.exclusions>**/de/gematik/demis/notificationgateway/common/constants/*,
            **/de/gematik/demis/notificationgateway/common/mappers/BundleMapper.java,
            **/de/gematik/demis/notificationgateway/common/properties/*,
            **/de/gematik/demis/notificationgateway/common/enums/*,
            **/de/gematik/demis/notificationgateway/NotificationGatewayApplication.java,
            **/de/gematik/demis/notificationgateway/domain/bedoccupancy/BedOccupancyRestController.java,
            **/de/gematik/demis/notificationgateway/domain/location/LocationRestController.java,
            **/de/gematik/demis/notificationgateway/domain/pathogen/PathogenRestController.java</sonar.exclusions>
    <commons-text.version>1.15.0</commons-text.version>
    <hapi.fhir.version>8.6.0</hapi.fhir.version>
    <pdfbox.version>3.0.6</pdfbox.version><!-- CVE Override -->
    <bouncycastle.version>1.83</bouncycastle.version>
    <openapi-generator.inputSpec>${project.basedir}/src/main/resources/spec/api-spec.yml</openapi-generator.inputSpec>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>33.5.0-jre</version>
      </dependency>
      <dependency>
        <groupId>com.google.errorprone</groupId>
        <artifactId>error_prone_annotations</artifactId>
        <version>2.45.0</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>org.bouncycastle</groupId>
        <artifactId>bcprov-jdk18on</artifactId>
        <version>${bouncycastle.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-fileupload</groupId>
        <artifactId>commons-fileupload</artifactId>
        <version>1.6.0</version>
      </dependency>
      <dependency>
        <groupId>ca.uhn.hapi.fhir</groupId>
        <artifactId>hapi-fhir-caching-api</artifactId>
        <version>${hapi.fhir.version}</version>
      </dependency>
      <dependency>
        <groupId>ca.uhn.hapi.fhir</groupId>
        <artifactId>hapi-fhir-caching-caffeine</artifactId>
        <version>${hapi.fhir.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>service-base</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.nimbusds</groupId>
      <artifactId>nimbus-jose-jwt</artifactId>
    </dependency>
    <dependency>
      <groupId>ca.uhn.hapi.fhir</groupId>
      <artifactId>hapi-fhir-client</artifactId>
      <version>${hapi.fhir.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents.client5</groupId>
      <artifactId>httpclient5</artifactId>
      <version>${httpclient5.version}</version>
    </dependency>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>commons</artifactId>
      <version>${demis-commons.version}</version>
    </dependency>
    <dependency>
      <groupId>de.gematik.demis</groupId>
      <artifactId>notification-builder-library</artifactId>
      <version>${notification.builder.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.cloud</groupId>
      <artifactId>spring-cloud-contract-wiremock</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <version>${pdfbox.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <version>${rest.assured.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>json-path</artifactId>
      <version>${rest.assured.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>xml-path</artifactId>
      <version>${rest.assured.version}</version>
      <scope>test</scope>
    </dependency><!-- test dependencies -->
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${surefire.plugin.version}</version>
        <configuration>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <version>${openapi-generator-maven-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/spec/schemas-spec.yml</inputSpec>
              <generatorName>spring</generatorName>
              <modelPackage>de.gematik.demis.notificationgateway.common.dto</modelPackage>
              <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
              <configOptions>
                <delegatePattern>true</delegatePattern>
                <useSpringBoot3>true</useSpringBoot3>
                <openApiNullable>false</openApiNullable>
              </configOptions>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jasig.maven</groupId>
        <artifactId>notice-maven-plugin</artifactId>
        <version>2.0.0</version>
        <configuration>
          <noticeTemplate>NOTICE.template</noticeTemplate>
          <outputDir>.</outputDir>
          <licenseMapping>license-mappings.xml</licenseMapping>
        </configuration>
        <executions>
          <execution>
            <id>notice-generation</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>generate-sources</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
